--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "integrate node with AI",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +24,11 @@
   },
   "homepage": "https://github.com/gaurav-2408/Node-AI-model#readme",
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "@langchain/core": "^0.3.39",
+    "@langchain/google-genai": "^0.1.8",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.9"
   }
 }
