--- a/package.json
+++ b/package.json
@@ -1,35 +1,18 @@
 {
   "name": "node_ai_model",
   "version": "1.0.0",
-  "description": "integrate node with AI",
+  "description": "DynamoDB AI Query Interface",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:backend": "cd backend && node index.js",
+    "start:frontend": "cd frontend && npm run dev",
+    "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gaurav-2408/Node-AI-model.git"
-  },
-  "keywords": [
-    "AI",
-    "model",
-    "NodeJs"
-  ],
-  "author": "Gaurav Jain",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gaurav-2408/Node-AI-model/issues"
-  },
-  "homepage": "https://github.com/gaurav-2408/Node-AI-model#readme",
-  "dependencies": {
-    "@langchain/core": "^0.3.39",
-    "@langchain/google-genai": "^0.1.8",
-    "aws-sdk": "^2.1692.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.9"
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
