Successful display of table

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "@langchain/core": "^0.3.39",
     "@langchain/google-genai": "^0.1.8",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node-fetch": "^3.3.2",
