--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,9 @@
   },
   "homepage": "https://github.com/gaurav-2408/Node-AI-model#readme",
   "dependencies": {
+    "@huggingface/inference": "^3.3.6",
     "@langchain/core": "^0.3.39",
-    "@langchain/google-genai": "^0.1.8",
+    "@langchain/google-genai": "^0.1.9",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
