--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "openai": "^4.85.4"
   }
 }
