--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:backend": "cd backend && node index.js",
     "start:frontend": "cd frontend && npm run dev",
     "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install"
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
+    "start": "set NODE_TLS_REJECT_UNAUTHORIZED=0 && react-scripts start"
   },
   "keywords": [],
   "author": "",
